cabal-version: >=1.10
name: Project9
version: 0.1.0.0
license: BSD3
license-file: LICENSE
maintainer: s.walinder@gmail.com
author: Sebastian Wålinder
build-type: Simple
extra-source-files:
                   CHANGELOG.md

executable Project9
    main-is: Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Weverything -Wincomplete-uni-patterns -Wincomplete-record-updates -Wno-implicit-prelude -Wmissing-home-modules -Widentities -Wredundant-constraints -Wpartial-fields -Wno-missing-exported-signatures -Wno-missing-export-lists -Wno-missing-import-lists -Wno-unsafe -Wno-safe -Wno-missing-local-signatures -Wmonomorphism-restriction -Wall-missed-specialisations -Wcpp-undef
    build-depends: base >=0
                 , linear
                 , reactive-banana >=0
                 , sdl2
                 , sdl2-image
                 , sdl2-sprite
                 , lens
                 , monad-loops
                 , extra
