cabal-version: 2.4
name: ReactiveGame
version: 0.1.0.0
-- license: BSD3
license-file: LICENSE
maintainer: s.walinder@gmail.com
author: Sebastian Wålinder
build-type: Simple
extra-source-files:
                   CHANGELOG.md

executable ReactiveGame
    main-is: Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Weverything -Wincomplete-uni-patterns -Wincomplete-record-updates -Wno-implicit-prelude -Wmissing-home-modules -Widentities -Wredundant-constraints -Wpartial-fields -Wno-missing-exported-signatures -Wno-missing-export-lists -Wno-missing-import-lists -Wno-unsafe -Wno-safe -Wno-missing-local-signatures -Wmonomorphism-restriction -Wall-missed-specialisations -Wcpp-undef -Wno-missing-signatures
    build-depends:
                  base >=0
                , extra
                , lens
                , linear
                , sdl2
                , sdl2-image
                , sdl2-sprite
                , template-haskell
                , gjk
                , dunai
                , bearriver
                , rhine
                , dunai